# ebsentinel

./: .gitignore  Cargo.toml  README.md
autoencoder/: Cargo.toml
autoencoder/src/: data.rs  lib.rs
ebsentinel/: Cargo.toml
ebsentinel-common/: Cargo.toml
ebsentinel-common/src/: lib.rs
ebsentinel-core/: Cargo.toml  build.rs
ebsentinel-core/src/: lib.rs  proc_mon.rs  process_data.rs
ebsentinel-ebpf/: Cargo.toml
ebsentinel-ebpf/src/: main.rs
ebsentinel-rec/: Cargo.toml
ebsentinel-rec/src/: cli.rs  ebsentinel_db.rs  main.rs
ebsentinel-train/: Cargo.toml
ebsentinel-train/src/: data.rs  main.rs  training.rs
ebsentinel/src/: cli.rs  main.rs
