[workspace]
resolver = "2"
members = [ "autoencoder","ebsentinel", "ebsentinel-common", "ebsentinel-core", "ebsentinel-ebpf", "ebsentinel-rec", "ebsentinel-train"]
default-members = ["ebsentinel", "ebsentinel-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
burn = { version = "0.16.0", default-features = false }
bincode = "1.3.3"
rusqlite = "0.32.1"
serde = { version = "1.0.217" }


[profile.release.package.ebsentinel-ebpf]
debug = 2
codegen-units = 1
