[package]
name = "ebsentinel-train"
version = "0.1.0"
edition = "2021"

[dependencies]
autoencoder= {path="../autoencoder"}
burn = { workspace=true, features = ["wgpu", "train"] }
rusqlite = {workspace= true}
serde_rusqlite = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
bincode =  {workspace = true}
serde_bytes = "0.11.15"
